cmake_minimum_required(VERSION 3.19)
project(cpp_Code)

set(CMAKE_CXX_STANDARD 11)

add_executable(cpp_Code main.cpp no1/no1.cpp no1/no1.h no2/no2.cpp no2/no2.h Sort/Sort.cpp Sort/Sort.h no3/no3.cpp no3/no3.h MyDate/Mydate.cpp MyDate/Mydate.h no4/no4.cpp no4/no4.h no5/no5.cpp no5/no5.h no6/no6.cpp no6/no6.h no7/no7.cpp no7/no7.h STL_String/STL_String.cpp STL_String/STL_String.h MyString/MyString.cpp MyString/MyString.h string_copy/string_copy.cpp string_copy/string_copy.h STL_vector/STL_vector.cpp STL_vector/STL_vector.h MyVector/MyVector.cpp MyVector/MyVector.h STL_List/STL_List.cpp STL_List/STL_List.h myList/myList.cpp myList/myList.h)